<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.articles.DptFragment"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="DPT"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:fontFamily="@font/poppins_regular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpt_1"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_regular"
        />

    <TextView
        android:id="@+id/dptDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hep_txt1"
        android:layout_marginBottom="4dp"
        />

    <TextView
        android:id="@+id/dptDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/hep_txt1"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/immuniCareBlue"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/dpt_2"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/dpt_3"
        android:layout_marginBottom="16dp"
        />


</LinearLayout>